- minor modifications to help menus and tutorials

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -101,9 +101,9 @@
             %p
               We automate all the mechanical aspects of the evaluation
               process through use of computer programs and combined this 
-              with that crucial bit of human judgement which is required
-              to complete the process. Thus we save the teacher time, give
-              her actionable data and statistics and provide the student
+              with the crucial bit of human judgement needed to complete
+              the process. Thus we save the teacher time, give her 
+              actionable data and statistics and provide the student
               with feedback as needed. 
       
         .span.anka{ :id => "who-we-are" }
