--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -93,8 +93,8 @@
                 %li.dropdown
                   = simple_link :for => "Misc.", :as => :dropdown, :id => 'm-teacher-workbench'
                 %li.dropdown
-                  = simple_link :for => "Help", :as => :dropdown, :id => 'm-howto'
-                %li.dropdown
+                  = simple_link :for => "How to", :as => :dropdown, :id => 'm-howto'
+                -#%li.dropdown
                   = simple_link :as => :dropdown, 
                     :id => 'm-notifications', :icon => "icon-white icon-bell"
                 %li#cp-account-link.dropdown
