--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -17,7 +17,7 @@
       :class => 'help-launcher', :launch => 'publish-milestone-1',
       :autoclick => 'lnk-existing-quiz', :icon => 'icon-share'
   %li
-    = simple_link :for => "Create a new Section", :id => 'help-mng-sektion',
+    = simple_link :for => "Create a new Group", :id => 'help-mng-sektion',
       :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-plus-sign'
   %li
     = simple_link :for => "Send Questions to add to database", :id => 'help-suggest-questions',
