--- a/app/views/menus/teacher/_rc.html.haml
+++ b/app/views/menus/teacher/_rc.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-rc{ :role => :menu }
   %li
-    = simple_link :for => "Per Worksheet", :id => 'lnk-tc-rc'
+    = simple_link :for => "All Worksheets", :id => 'lnk-tc-rc'
   %li
-    = simple_link :for => "Deep Dive", :id => 'lnk-rc-deepdive'
+    = simple_link :for => "Stats and Analysis", :id => 'lnk-rc-deepdive'
