--- a/app/views/teachers/_deepdive.html.haml
+++ b/app/views/teachers/_deepdive.html.haml
@@ -1,7 +1,7 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Section", :id => "tab-dive-1",
+    = simple_link :for => "Group", :id => "tab-dive-1",
       :href => '#pane-dive-1', :class => 'nopurge-ever'
   %li
     = simple_link :for => "By Topic", :id => "tab-dive-2",
