--- a/app/views/tutorials/teacher/welcome/_one.html.haml
+++ b/app/views/tutorials/teacher/welcome/_one.html.haml
@@ -5,12 +5,12 @@
       <b>Hello, and welcome to Gradians.com</b>
     %p
       You seem to be new to Gradians.com. And so, we thought we should let you know  
-      that as you use the site, <b>help is available</b> and is available here
+      that as you use the site, <b>help is available</b> and it is available here
     %p
-      As a first step, we would recommend you try making a quiz <tt>(Help > Make a Quiz)</tt>.
+      As a first step, we recommend you try making a quiz <tt>(How to > Make a Quiz)</tt>.
       Its the best way to get familiar with the site 
     %p
       We thank you for using Gradians.com. We made it to help teachers and we 
-      hope you will find it useful
+      hope you will find it useful.
     %p
       <b>Abhinav & Akshay</b><br/>Co-founders
