--- a/app/views/tutorials/teacher/wsb/_one.html.haml
+++ b/app/views/tutorials/teacher/wsb/_one.html.haml
@@ -7,7 +7,7 @@
     %p
       If you see nothing here, then you haven't made a quiz yet. 
       Please ensure that you have made one before proceeding </br>
-      <i class='icon-eye-open'></i> <tt> Help > Make a Quiz</tt>
+      <i class='icon-eye-open'></i> <tt> How to > Make a Quiz</tt>
     %p
       Otherwise, click <b>more ...</b> and select <i class='icon-plus-sign'></i> <b>new worksheet</b> 
       from the menu
