--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -879,3 +879,20 @@ li.split {
     visibility: hidden ;
   }
 }
+
+[class*="ikon-scanbot"] {
+  display: inline-block;
+  width: 14px ;
+  height: 14px ;
+  margin-right: 2px ;
+  margin-top: 1px ;
+  vertical-align: text-top;
+}
+
+.ikon-scanbot {
+  background-image: url("scanbot-icon.png");
+}
+
+.ikon-scanbot-folder {
+  background-image: url("scanbot-folder-icon.png");
+}
