- changed 'section' to 'group' for student groups - fixed bug in registration introduced due to field clean up of Teacher model

--- a/app/views/teachers/_sektions.html.haml
+++ b/app/views/teachers/_sektions.html.haml
@@ -1,10 +1,11 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Existing", :href => '#pane-mng-sektions-1', :id => 'tab-mng-sektions-1'
+    = simple_link :for => "Groups", :href => '#pane-mng-sektions-1', :id => 'tab-mng-sektions-1'
 
 .tab-content
   #pane-mng-sektions-1.tab-pane
     .row-fluid
-      = simple_link :for => "Add a New Section", :id => 'lnk-add-sektion', :icon => 'icon-plus-sign',
+      = simple_link :for => "Add a New Group", :id => 'lnk-add-sektion', :icon => 'icon-plus-sign',
       :href => '#m-add-sektion'
+      
