--- a/app/views/tutorials/teacher/mng-sektions/_three.html.haml
+++ b/app/views/tutorials/teacher/mng-sektions/_three.html.haml
@@ -4,16 +4,16 @@
   %li{ :data => { :id => 'pane-mng-sektions-1' }} 
     %h6= "#3"
     %p
-      A new section has been created and will be listed here.
-      Also shown is the <b>unique code</b> - written in <b>orange</b> - that is given to each section
+      A new group has been created and will be listed here.
+      Also shown is the <b>unique code</b> - written in <b>orange</b> - that is given to each group
     %p
-      <b>Give this code to all students you want in this section</b>. Students will log into 
-      their Gradians.com account, enter this code and <b>enroll themselves</b> into this section
+      <b>Give this code to all students you want in this group</b>. Students will log into 
+      their Gradians.com account, enter this code and <b>enroll themselves</b> into this group
     %p
-      A student can belong to more than one section. She could, for example, belong to a 
-      section called 11-A and another section called Gifted Students 
+      A student can belong to more than one group. She could, for example, belong to a 
+      group called 11-A and another group called Gifted Students 
     %p
-      The point is that a section is nothing more than a group of students. And you can 
+      The point is that a group is nothing more than a group of students. And you can 
       group your students in any which way you want
       
 
