--- a/app/views/tutorials/teacher/mng-sektions/_two.html.haml
+++ b/app/views/tutorials/teacher/mng-sektions/_two.html.haml
@@ -6,7 +6,7 @@
     %p
       Click this button here
     %p
-      A short form will open. <b>Provide a name for the new section</b>. 
+      A short form will open. <b>Provide a name for the new group</b>. 
       Then, click the <b>Add</b> button
     %p
       Any name will do. It can be descriptive - like Gifted Students - or purely functional- like 11-A
