--- a/app/views/tutorials/teacher/mng-sektions/_one.html.haml
+++ b/app/views/tutorials/teacher/mng-sektions/_one.html.haml
@@ -4,4 +4,4 @@
   %li{ :data => { :id => 'm-teacher-workbench' } }
     %h6= "#1"
     %p
-      Click here and then select <b>My Sections</b> from the menu
+      Click here and then select <b>My Groups</b> from the menu
