--- a/app/views/tutorials/teacher/wsb/_two.html.haml
+++ b/app/views/tutorials/teacher/wsb/_two.html.haml
@@ -3,11 +3,11 @@
   %li{ :data => { :id => 'wsb-ul-milestone-2' } }
     %h6= "#2"
     %p
-      <b>Select a section</b> from the list of sections shown here
+      <b>Select a group</b> from the list of groups shown here
     %p
-      If you haven't yet made a section of your own, then you would 
-      see a default section we created for you - called Gradians
+      If you haven't yet made a Group of your own, then you would 
+      see a default group we created for you - called Gradians
     %p
-      Select it if its the only section you see. Gradians has just two 
+      Select it if its the only group you see. Gradians has just two 
       students - us - the two founders of Gradians.com. For now, however,
       we are also your students
