--- a/app/views/tutorials/teacher/wsb/_three.html.haml
+++ b/app/views/tutorials/teacher/wsb/_three.html.haml
@@ -5,7 +5,7 @@
     %p
       Next <b>pick students</b> for whom the worksheet is to be made
     %p
-      Students are listed by the study-group they are part of. 
+      Students are listed by the <b>Group</b> the are part of. 
       Select a group and then select students. To <b>select all</b> students 
       in a group, press <i class='icon-list'></i>
   %li{ :data => { :id => 'build-worksheet', :options => 'tipLocation:top;nubPosition:bottom' } }
