--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
             %li
               %a.smooth-scroll{ :href => '#about'}= "About"
             %li
-              %a.smooth-scroll{ :href => '#who-we-are'}= "Who we are"
+              %a.smooth-scroll{ :href => '#who-we-are'}= "Who We Are"
             %li
               %a.smooth-scroll{ :href => '#contact'}= "Contact Us"
             %li
@@ -85,64 +85,79 @@
             %span Teachers know best
             %p
               There are a great many ideologies behind what can be done
-              to further the cause of education. For us the answer is
-              clear - If you want to help the student, help the teacher
-              first.
+              to further the cause of Education. We don't profess to know
+              all of them, but we do know one thing - if you want to help
+              students, help the teacher first.
             %p
-              This is our driving principle and what, we believe, sets us
-              apart from several other well intentioned efforts.
+              Our governing principle is to keep the Teacher in the driver's 
+              seat. This is what sets us apart from several other well
+              intentioned efforts.
             
           .span4.offset1
             %span It takes a village
             %p
               When we talk about helping the teacher, we work on one basic
-              assumption - Teacher's know how to teach. All they need are
-              the time and the resources to do their job well.
+              assumption - she knows how to teach. What she could use however
+              is extra time and resources that can help her be more 
+              effective.
             %p
-              We automate all the mechanical aspects of the evaluation
-              process through use of computer programs and combined this 
-              with the crucial bit of human judgement needed to complete
-              the process. Thus we save the teacher time, give her 
-              actionable data and statistics and provide the student
-              with feedback as needed. 
+              To this end, we've automated various aspects of the time 
+              consuming but important process of gathering feedback on student
+              progress. In doing so, we not only save the teacher time, we 
+              also provide her actionable data and statistics and her students
+              quality feedback. 
       
         .span.anka{ :id => "who-we-are" }
         .row-fluid.link-bar-item
           %h1.offset2= "Who we are" 
           .span4.offset1
-            %span
-              %a.brand.span4
-                = image_tag "AbhinavAndAkshay.gif"
+            %span Bios
+            %p
+              <b>Abhinav</b> worked as an engineer in the Electronics Design 
+              Automation industry for 6 years before going on to get an 
+              Masters degree in Business from UCLA.</br>
+              He appreciates good design in everyday things and is a talented 
+              Squash player.
+            %p
+              <b>Akshay</b> got a Master's degree in Computer Science from NYU
+              and worked thereafter in the Financial Services industry for over
+              8 years as a Software Engineer.</br>
+              He shares Abhinav's interest in creative and innovative pursuits
+              and racquet sports.
 
           .span4.offset1
             %span Our History
             %p
-              \In 2008, while grading papers for his Statistics professor,
-              Abhinav Chaturvedi realised that it was an extremely laborious
-              task peppered with simple yet boring manual steps like collation,
-              addition, data-entry etc. It occured to him that if every teacher
-              anywhere in the World has to do this to get a single data-point on
-              student's progress, she probably wouldn't want to do it too often.
+              In 2008, while grading papers for his Statistics professor at
+              UCLA, Abhinav Chaturvedi realised that it was an extremely 
+              laborious activity peppered with repetitive steps like collation,
+              addition, data-entry etc. It occured to him that if the professor
+              in question had to do all of this himself, he probably would not
+              do it very often.
             %p
-              This was the genesis of the Gradians platform. Together with his
-              college roommate Akshay Damarla he set about creating the Gradians
-              Distributed Evaluation Platform.
+              This was the genesis of Gradians.com. Together with his old
+              college roommate Akshay Damarla he set about creating the 
+              Gradians Distributed Evaluation Platform. The platform is the
+              backbone of a unique service that allows any teacher to operate
+              as effectively as a university professor with an army of
+              assistants. 
   
         .span.anka{ :id => "contact" }
         .row-fluid.link-bar-item
           %h1.offset2= "We'd love to hear from you" 
           .span4.offset1
-            %span If you are registered
+            %span help@gradians.com
             %p
-              Write us at help@gradians.com and let us know of your comments,
-              problems or suggestions. Someone from our team will get back to
-              you promptly.
+              If you are registered for our service plese let us know of your 
+              experience. Your comments and suggestions are invaluable as they
+              are what in the end will get us better. </br>
+              Help us help you!
               
           .span4.offset1
-            %span otherwise
+            %span [abhinav or akshay]@gradians.com
             %p
-              abhinav@gradians.com or akshay@gradians.com 
-              for business inquiries, compliments, curiosity etcetera.
+              for business inquiries, partnership proposals, compliments, 
+              curiosity, etcetera. Our Inbox is always open.
   
         .span.anka{ :id => "pricing" }
         .row-fluid.link-bar-item
@@ -151,19 +166,17 @@
             %span Individual Teachers
             %p
               We are working on a pricing plan which will be practical and
-              affordable for the average high school Math teacher. We'd like
-              you to start using it on us, so that we can an idea of how much
-              you like it. In the meantime, tell us that you like it and we'll
-              have some numbers up for you soon.
+              affordable for the average high school Math teacher. In the
+              meantime however, we'd like you to start using the system on 
+              us. So we get an idea of what you like about it and what you
+              don't.
               
           .span4.offset1
             %span School Boards, Districts, Counties, MOOCs etc.
             %p
-              Please write to one of us or to help@gradians.com with the 
-              nature of your interest. One of us will get back to you shortly.
-              Whether its a Pilot or a full blown implementation, we are happy
-              to partner with you and enable the Gradians platform to lend 
-              more rigor value to a student's course experience
+              Please write to us. We are happy to partner with you on a pilot
+              and see if the Gradians platform can lend more rigor and value
+              to a student's course experience
 
       -#.row-fluid#our-belief
         %h1.offset2= "Wish someone told us this when we were 17" 
