[teacher]: Initial framework for favouriting a question
Option to favourite shown in dropdown menu.
This menu could have other options - like report an issue w/ a question

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -314,6 +314,17 @@ $green: #347235 ; // rgb(87,188,32)
     > a { 
       color: $lightgray ;
     }
+
+    > .dropdown-menu { 
+      a { 
+        background-color: transparent ; 
+        border: none ;
+        float: none ;
+        padding: 3px 20px ;
+        border-radius: 0px ;
+        &:hover { color: white ; }
+      } 
+    } 
   } 
 
   .subtext { 
