--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -13,6 +13,7 @@
 
     = render :partial => 'menus/teacher/per-qz'
     = render :partial => 'menus/teacher/per-ws'
+    = render :partial => 'menus/teacher/per-question'
     = render :partial => 'menus/teacher/qz-main', :locals => { :teacher => tc, :server => server }
     = render :partial => 'menus/teacher/workbench', :locals => { :server => server }
     = render :partial => 'menus/teacher/rc' 
