[Teacher]: Acknowledge favouriting of a question

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -30,6 +30,7 @@
     = render :partial => 'modals/teacher/add-sektion'
   #notifications
     = render :partial => 'notifications/quiz-compiled'
+    = render :partial => 'notifications/favourited'
 
 - content_for :tutorials do 
   #tutorials
