--- a/app/views/teachers/_form-qzb.html.haml
+++ b/app/views/teachers/_form-qzb.html.haml
@@ -3,9 +3,8 @@
 - data_id = context == :editqz ? "tab-wsb-quizzes" : nil
 - btn_text = context == :editqz ? "Add Selected" : "Build Quiz"
 
-= simple_form_for :checked, :remote => true, 
-  :html => { :id => "form-#{context}", :class => 'no-remove',
-  :data => { :action => "#{action}", :id => "#{data_id}" }} do |f|
+= simple_form_for :checked, :remote => true, :url => "#{action}",
+  :html => { :id => "form-#{context}", :class => 'no-remove' } do |f|
 
   .row-fluid.navbar.purge-skip
     - if context == :editqz
