--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -32,6 +32,7 @@
     = render :partial => 'notifications/quiz-compiled'
     = render :partial => 'notifications/teacher/favourited'
     = render :partial => 'notifications/teacher/qzb-nothing-selected'
+    = render :partial => 'notifications/teacher/new-sektion'
 
 - content_for :tutorials do 
   #tutorials
