Barf if browser too old ...

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -135,6 +135,7 @@ $green: #347235 ; // rgb(87,188,32)
 } 
 
 .modal { 
+  line-height: 15px ;
   font-weight: 300 ;
   padding: 10px ;
   background: rgba(25,25,25,0.8) ; 
