--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
   #modals
     = render :partial => 'notifications/registered'
     = render :partial => 'modals/user/register', :locals => { :server => server }
+    = render :partial => 'notifications/shared/old-browser'
 
 !!!5
 
