[teacher > report-cards]: Changed explanatory text and gave menu-items icons

--- a/app/views/menus/teacher/_rc.html.haml
+++ b/app/views/menus/teacher/_rc.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-rc{ :role => :menu }
   %li
-    = simple_link :for => "All Worksheets", :id => 'lnk-tc-rc'
+    = simple_link :for => "Individual worksheets", :id => 'lnk-tc-rc', :icon => 'icon-list'
   %li
-    = simple_link :for => "Stats and Analysis", :id => 'lnk-rc-deepdive'
+    = simple_link :for => "Student proficiency in topic", :id => 'lnk-rc-deepdive', :icon => 'icon-signal'
