[#30] Auto-login upon registration   - students and teachers get auto-logged in on registration   - removed clear text password form welcome email   - modified welcome email text to reflect the fact that login has happened   - (unrelated) suppressed devise warning message due to deprecated config

--- a/app/views/mailbot/welcome_teacher.html.haml
+++ b/app/views/mailbot/welcome_teacher.html.haml
@@ -1,29 +1,29 @@
 
 %h3= "Thank you for registering with Gradians.com"
 %p
-  Your <b>free account</b> has been created. You can access it using the login
-  and password below
-%p
-  <b>Username</b>: #{@account.email}
-  <b>Password</b>: #{@account.password}
+  Your <b>free account</b> has been created. You can access it using this email
+  address and the password you specified during registration.
 
-%h4= "What next?"
+%h4= "What next? Make a quiz!"
 
 %p
   %ol
-    %li= "Login using your email and password above"
-    %li= "Make a quiz by picking topics in the sample syllabus"
     %li 
-      Assign this quiz to students in the sample class.  
+      Pick topics and questions to build a quiz
+    %li 
+      Assign this quiz to students from the sample class <b>gradians</b>.  
     %li
       Download and print the testpaper PDF. 
     %li
-      Scan the testpaper and send it to us using our downloadable scanning utility.
+      Attempt it as though you were a student. 
+    %li
+      Scan the testpaper and send it to us using our downloadable scanning utility <b>Scanbot</b>.
       We will grade the papers and the reports would become available in your account
 %p
   There is <b>no limit</b> on how many times you can repeat the above cycle. 
-  And use the online How-To documentation. It covers all the steps 
-  described above and can be of great help while getting started
+  Use the online How-To documentation as a step-by-step guide. It covers all 
+  the steps described above and can be of great help while getting started.
+ 
 %p
   Needless to say, we are here to help as you try gradians.com out. Write to 
   us on <b>help@gradians.com</b> with any queries that you may have 
