--- a/app/views/mailbot/welcome_student.html.haml
+++ b/app/views/mailbot/welcome_student.html.haml
@@ -1,27 +1,18 @@
 
 %h3= "Thank you for registering with Gradians.com"
 %p
-  Congratulations on having taken this first step towards taking
-  on the Gradians Self Learning system.
-%p
-  Your <b>trial account</b> has been created. You can access it using the login
-  and password below
-%p
-  <b>Username</b>: #{@account.email}
-  <b>Password</b>: #{@account.password}
+  Your <b>account</b> has been created. You can access it using this
+  email address and the password you specified.
+
 %h4= "What next?"
-%p
-  The trial account allows you to try the system free of cost so you can
-  make an informed decision about whether or not you want to purchase 
 %p 
-  When you login, you will have access to a quizz that we have created
-  for you. Go ahead and print out the worksheet, solve it to the best of
-  your ability (NO ONE gets to see your work but you), scan the solved
-  answers and send them over to us using Scanbot
+  As your teacher creates quizzes for you, you will have access to them. You
+  can  go ahead and print out the worksheets, solve them to the best of your 
+  ability - NO ONE gets to judge your work but you and your teacher.
 %p
   There is <b>no pressure</b> to get the right answer. The main motivation
-  behind this work is to give you a safe space where you can experience the
-  experience the subject as a fun mental challenge at your own pace. 
+  behind this system is to create a safe space where you can experience the
+  subject as a fun mental challenge at your own pace. 
 %p
   Needless to say, we are here to help as you try gradians.com out. Write to 
   us on <b>help@gradians.com</b> with any queries that you may have 
