--- a/app/views/modals/user/_register.html.haml
+++ b/app/views/modals/user/_register.html.haml
@@ -9,24 +9,24 @@
     #pane-register-1.tab-pane.push-down
       = simple_form_for :register, :url => register_teacher_path, 
       :remote => true, :defaults => { :label => false }, :html => { :id => 'fm-register-teacher' } do |f|
-        = f.input :name, :hint => "Full name"
-        = f.input :email, :hint => "Your e-mail. Will also be used for logging in"
+        = f.input :name, :placeholder => "Full Name"
+        = f.input :email, :placeholder => "Your e-mail"
         .error.email.hide= "Oops, e-mail address already taken"
-        = f.input :password, :hint => "Password (minimum 6 characters)"
+        = f.input :password, :placeholder => "Password"
         .error.password.hide= "Password should be atleast 6 characters long"
-        = f.input :country, :hint => "Country?", :input_html => { :id => 'rg-country' }
-        = f.input :zip, :hint => "School's Zip/Pin Code"
+        = f.input :zip, :placeholder => "Postal Code"
+        = f.input :country, :hint => "Select Country", :input_html => { :id => 'rg-country' }
         = f.input :guard, :wrapper_html => { :class => :hide}, :required => false
         %button.btn.btn-large.btn-primary.push-down.pull-left{:type => :submit}= "Register"
     #pane-register-2.tab-pane.push-down
       = simple_form_for :register, :url => register_student_path, 
       :remote => true, :defaults => { :label => false }, :html => { :id => 'fm-register-student' } do |f|
-        = f.input :name, :hint => "Full name"
-        = f.input :email, :hint => "Your e-mail. Will also be used for logging in"
+        = f.input :name, :placeholder => "Full Name"
+        = f.input :email, :placeholder => "Your e-mail"
         .error.email.hide= "Oops, e-mail address already taken"
-        = f.input :password, :hint => "Password (minimum 6 characters)"
+        = f.input :password, :placeholder => "Password"
         .error.password.hide= "Password should be atleast 6 characters long"
-        = f.input :code, :hint => "Your teacher must have given you a code for the course. Enter that here"
+        = f.input :code, :placeholder => "Group Code", :hint => "Group Code is provided by your teacher"
         .error.sektion.hide= "Code not found! Did you forget the hyphen (-)?"
         %button.btn.btn-large.btn-primary.push-down.pull-left{:type => :submit}= "Register"
         = f.input :guard, :wrapper_html => { :class => :hide}, :required => false
