No need to pass :server as a local variable to _register partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   #toolbox.hidden 
   #modals
     = render :partial => 'notifications/registered'
-    = render :partial => 'modals/user/register', :locals => { :server => server }
+    = render :partial => 'modals/user/register'
     = render :partial => 'notifications/shared/old-browser'
 
 !!!5
