--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -1,8 +1,11 @@
 
+- my_sektions = teacher.sektions 
+- my_sektions = my_sektions.blank? ? Sektion.where(:id => 58) : my_sektions
+
 -# Left-side tabs - one per section
 #sektions-tab.tabbable.tabs-left
   %ul.nav.nav-tabs.span3{ :id => 'wsb-ul-milestone-2' }
-    - teacher.sektions.each do |m|
+    - my_sektions.each do |m|
       %li
         = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
         :href => "#wsb-sektions", :url => "sektion/students.json?id=#{m.id}"
