--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -63,6 +63,8 @@
             = render :partial => 'toolbox/grd-pending'
           #left-5
             = render :partial => 'toolbox/typeset-pending'
+          #left-6
+            = render :partial => 'examiners/resolution-pending'
 
         - if is_admin
           #middle.g-panel.span4
