[control-panel]: Highlight the dropdown-toggle is sth. is selected from the accompanying menu ...
Also, if there be no menu, then highlight the simple link

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -576,6 +576,13 @@ button[data-toggle='button'] {
   .dropdown-toggle {
     &.disabled { color: $lightgray ; }
   }
+
+  a { 
+    &.selected { 
+      border-radius: 6px ;
+      background-color: $deep-blue ;
+    } 
+  }
 } 
 
 #desktop { 
