--- a/app/views/notifications/teacher/_queued.html.haml
+++ b/app/views/notifications/teacher/_queued.html.haml
@@ -1,7 +1,7 @@
 
 #n-queued.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 4000 } }
   .span3
-    = image_tag 'timer.png', :class => 'big-icon'
+    = image_tag 'notifications/timer.png', :class => 'big-icon'
   .span8
     %p.title
     %p
