Notifications added for when the first and last scans are reached during grading

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -17,6 +17,8 @@
   
 - content_for :modals do
   = render :partial => 'modals/user/account'
+  = render :partial => 'notifications/shared/last-scan'
+  = render :partial => 'notifications/shared/first-scan'
 
 !!!5
 
