--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -34,6 +34,8 @@
     = render :partial => 'notifications/teacher/new-sektion'
     = render :partial => 'notifications/teacher/queued'
     = render :partial => 'notifications/teacher/compiled'
+    = render :partial => 'notifications/shared/last-scan'
+    = render :partial => 'notifications/shared/first-scan'
 
 - content_for :tutorials do 
   #tutorials
