Fixed outstanding issues in edit-quiz
Also, added notifications for each step

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -34,6 +34,7 @@
     = render :partial => 'notifications/teacher/new-sektion'
     = render :partial => 'notifications/teacher/queued'
     = render :partial => 'notifications/teacher/compiled'
+    = render :partial => 'notifications/teacher/edit-quiz'
     = render :partial => 'notifications/shared/last-scan'
     = render :partial => 'notifications/shared/first-scan'
 
