Changed icon in edit-quiz notifications

--- a/app/views/notifications/teacher/_edit-quiz.html.haml
+++ b/app/views/notifications/teacher/_edit-quiz.html.haml
@@ -1,7 +1,7 @@
 
 #n-edit-quiz.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 6000 } }
   .span3
-    = image_tag 'notifications/timer.png', :class => 'big-icon'
+    = image_tag 'notifications/edit.png', :class => 'big-icon'
   .span8
     %p.title
     %p.msg
