Corrected notification text

--- a/app/views/notifications/shared/_old-browser.html.haml
+++ b/app/views/notifications/shared/_old-browser.html.haml
@@ -5,11 +5,10 @@
   .span8
     %p.title= "Old Browser?"
     %p
-      Our browsers do not support all the features that we require
-    %p
-      And so, we recommend the following
+      For a seamless experience, we recommend you switch to one of the browsers below 
       %ul
         %li= "Firefox (version 3.5+)"
         %li= "Google Chrome"
         %li= "Internet Explorer (version 9+)"
         %li= "Safari (version 5.1+)"
+
