--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -28,6 +28,7 @@
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/teacher/suggestion'
     = render :partial => 'modals/teacher/add-sektion'
+    = render :partial => 'modals/user/ask-a-question'
   #notifications
     = render :partial => 'notifications/teacher/favourited'
     = render :partial => 'notifications/teacher/qzb-nothing-selected'
@@ -37,6 +38,7 @@
     = render :partial => 'notifications/teacher/edit-quiz'
     = render :partial => 'notifications/shared/last-scan'
     = render :partial => 'notifications/shared/first-scan'
+    = render :partial => 'notifications/shared/question-received'
 
 - content_for :tutorials do 
   #tutorials
