--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -25,6 +25,10 @@
   %li
     = simple_link :for => "Send Scans for Grading", :id => 'help-upload-scans',
       :class => 'help-launcher', :launch => 'upload-scans-milestone-1', :icon => 'icon-share'
+  %li.divider
+  %li
+    = simple_link :for => "Ask a question", :icon => 'icon-question-sign', 
+      :id => 'lnk-ask-a-question', :href => '#m-ask-a-question'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
